# DataEditorY

./: .gitignore  AGENTS.md  README.md  code_review.md  codemap.md  old_query.ts  old_query2.ts  package.json  vite.config.js
.github/workflows/: release.yml
.slim/: codemap.json
docs/: ARCHITECTURE.md  REFACTORING-PLAN.md  ui-unification-checklist.md
docs/superpowers/plans/: 2026-05-26-external-script-files.md  2026-05-26-online-renderer-dependency.md
scripts/: build-lua-intel.mjs  build-variant-config.mjs  build-variant-config.test.mjs  codemap.md  download-renderer-bundle.mjs  remove-build-assets.mjs  run-variant-build.mjs  write-tauri-config.mjs
src/: ambient.d.ts  app.css  app.html  bun-test.d.ts  codemap.md
src-tauri/: Cargo.toml  codemap.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cdb.rs  codemap.md  lib.rs  main.rs  test_helpers.rs
src-tauri/src/commands/: ai.rs  app.rs  assets_check.rs  cdb.rs  codemap.md  lua_replace.rs  media.rs  metadata.rs  mod.rs  package.rs  render_card.rs  scripts.rs  settings.rs
src-tauri/src/document_host/: cdb.rs  codemap.md  commands.rs  mod.rs  models.rs  search.rs
src-tauri/src/models/: app.rs  cdb.rs  codemap.md  mod.rs
src-tauri/src/repository/: cdb.rs  codemap.md
src-tauri/src/services/: ai.rs  app_config.rs  assets.rs  assets_check.rs  card_render.rs  cdb_cards.rs  cdb_session.rs  codemap.md  crypto.rs  logging.rs  lua_replace.rs  media.rs  merge.rs  metadata.rs  mod.rs  package.rs  scripts.rs  settings.rs
src-tauri/src/services/card_render/: adapter.rs  bundle.rs  dto.rs  edit.rs  error.rs  mod.rs  output.rs  resources.rs
src-tauri/src/services/media/: error.rs  image.rs  io.rs  mod.rs  protocol.rs  strings.rs  system.rs
src-tauri/src/session/: cdb.rs  codemap.md
src/lib/: codemap.md
src/lib/actions/: codemap.md  disableAutofill.ts
src/lib/application/: codemap.md
src/lib/build-stubs/: README.md
src/lib/components/: CardEditor.svelte  CardImageDrawer.svelte  CardImageWorkspace.svelte  CardList.svelte  LuaScriptEditor.svelte  SetcodeField.svelte  SettingsPanel.svelte  TextEditorWorkbench.svelte  Toast.svelte  codemap.md
src/lib/config/: build.ts  codemap.md
src/lib/core/: codemap.md
src/lib/data/: taxonomy-config.ts
src/lib/domain/: codemap.md
src/lib/features/: codemap.md
src/lib/i18n/: codemap.md  index.ts
src/lib/infrastructure/: codemap.md
src/lib/modules/: active.ts  base.ts  codemap.md  composition.test.ts  extra.ts
src/lib/native/: aiApi.ts  assetApi.ts  cdbApi.ts  codemap.md  index.ts  metadataApi.ts  scriptApi.ts  settingsApi.ts  taskApi.ts
src/lib/platform/: appRuntime.ts  codemap.md  filePatterns.ts  index.ts  memoryProvider.ts  persistentMemoryProvider.ts  registry.test.ts  registry.ts  runtime.test.ts  runtime.ts  store.svelte.ts  types.ts  workbenchActions.ts
src/lib/services/: aiAppContext.ts  cardImageService.ts  cardScriptService.ts  codemap.md  scriptGeneration.ts  scriptGenerationStages.ts  scriptTemplate.ts  setcodeCatalog.test.ts  setcodeCatalog.ts
src/lib/stores/: appSettings.svelte.ts  appSettingsRequest.test.ts  appSettingsRequest.ts  appShell.svelte.ts  cardClipboard.svelte.ts  cardImageEditor.svelte.ts  cardOperations.ts  cardSelection.svelte.ts  cardUtils.ts  codemap.md  db.ts  editor.svelte.ts  recentHistory.ts  scriptEditor.svelte.ts  search.ts  searchActions.ts  searchResults.svelte.ts  searchState.svelte.ts  searchStore.svelte.ts  tabs.ts  textEditor.svelte.ts  toast.svelte.ts  undo.ts
src/lib/types/: app.ts  card-image-workspace.ts  cdb.ts  codemap.md  index.ts  render.ts  script.ts
src/lib/utils/: ai.ts  card.ts  (+26 more)
src/routes/: +layout.svelte  +page.svelte  codemap.md
static/resources/: _functions.txt  def.lua  pack.db  snippets.json
tests/fixtures/: card-render-payload.json  card-render-png-snapshot.json
(+267 files in other folders)
