[package]
name = "dataeditory"
version = "1.4.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dataeditory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled", "backup", "functions"] }
mime_guess = "2"
percent-encoding = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
regex = "1"

[profile.release]
# Faster linking with thin LTO
lto = "thin"
# Higher parallelism during code generation
codegen-units = 16
# Reduce binary size/debug info to speed up building
debug = false
strip = true
panic = "abort" # Optional: reduces size and slightly speeds up build
